# easycopy

./: .gitignore  COMPARISON.md  Cargo.toml  HOMEBREW_SUBMISSION.md  PACKAGE_PUBLISHING.md  QUICKSTART.md  README.md  RELEASE.md  STRUCTURE.md  easycopy-formula.patch  easycopy.1  quick-submit.sh  submit-homebrew-local.sh  submit-local.sh  submit-to-homebrew.sh
.github/workflows/: npm-publish-mcp.yml  release.yml
Formula/: easycopy.rb
mcp-server/: README.md  dev-mcp-proxy.py  package.json
packaging/: PKGBUILD  PUBLISHING.md  easycopy.spec  homebrew-formula.rb  setup-homebrew-tap.sh
scripts/: test-homebrew-formula.sh
src/: cxml_gen.rs  file_analyzer.rs  git_ops.rs  html_builder.rs  main.rs  tree_gen.rs  utils.rs
