[package]
name = "easycopy"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "Flatten a GitHub repo into a single static HTML page for fast skimming and search"
license = "BSD-Zero-Clause"

[dependencies]
# Git operations
git2 = "0.19"

# Command line parsing
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Syntax highlighting
syntect = "5.2"

# Markdown rendering
pulldown-cmark = "0.12"

# HTML escaping
html-escape = "0.2"

# Path operations
pathdiff = "0.2"

# Temporary directories
tempfile = "3.13"

# Open browser
opener = "0.7"

# File type detection
infer = "0.16"

# Serialization for templates
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
