[package]
name = "easycopy"
version = "2.0.0"
edition = "2021"
authors = ["Dhananjay Singh"]
description = "Flatten a GitHub repo into a single static HTML page for fast skimming and search"
license = "BSD-Zero-Clause"

[dependencies]
# Git operations
git2 = { version = "0.19", features = ["vendored-openssl"] }

# Command line parsing
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Syntax highlighting
syntect = "5.2"

# Markdown rendering
pulldown-cmark = "0.12"

# HTML escaping
html-escape = "0.2"

# Path operations
pathdiff = "0.2"

# Temporary directories
tempfile = "3.13"

# Open browser
opener = "0.7"



# Serialization for templates
serde = { version = "1.0", features = ["derive"] }

# Progress indicators
indicatif = "0.17"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Metadata for cargo-deb
[package.metadata.deb]
maintainer = "Dhananjay Singh <dhananjay@example.com>"
copyright = "2025, Dhananjay Singh"
license-file = ["LICENSE", "4"]
extended-description = """\
A Rust implementation of rendergit that works on Windows, Linux, and Android (Termux).
Flatten any GitHub repository into a single, static HTML page with syntax highlighting,
markdown rendering, and a clean sidebar navigation."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
  ["target/release/easycopy", "usr/bin/", "755"],
  ["README.md", "usr/share/doc/easycopy/", "644"],
  ["LICENSE", "usr/share/doc/easycopy/", "644"],
  ["easycopy.1", "usr/share/man/man1/", "644"],
]
